crates/rpkl-runtime/tests/snapshots/snapshot_tests__upstream_intseq_api.snap
---
source: crates/rpkl-runtime/tests/snapshot_tests.rs
assertion_line: 3668
expression: eval_pkl(source)
---
{
  "seq": [
    1,
    2,
    3,
    4
  ],
  "start": 1,
  "end": 5,
  "step": 1,
  "to_list": [
    1,
    2,
    3,
    4,
    5
  ]
}
