crates/rpkl-runtime/tests/snapshots/snapshot_tests__upstream_intseq_map.snap
---
source: crates/rpkl-runtime/tests/snapshot_tests.rs
assertion_line: 3685
expression: eval_pkl(source)
---
{
  "result": [
    1,
    4,
    9,
    16,
    25
  ]
}
