crates/rpkl-runtime/tests/snapshots/snapshot_tests__upstream_let_chain.snap
---
source: crates/rpkl-runtime/tests/snapshot_tests.rs
assertion_line: 2730
expression: eval_pkl(source)
---
{
  "res": 3
}
