crates/rpkl-runtime/tests/snapshots/snapshot_tests__upstream_let_in_class.snap
---
source: crates/rpkl-runtime/tests/snapshot_tests.rs
assertion_line: 2744
expression: eval_pkl(source)
---
{
  "res": {
    "x": 4,
    "y": 6,
    "f": "<function>",
    "z": 6
  }
}
