crates/rpkl-runtime/tests/snapshots/snapshot_tests__upstream_let_in_function.snap
---
source: crates/rpkl-runtime/tests/snapshot_tests.rs
assertion_line: 2713
expression: eval_pkl(source)
---
{
  "f": "<function>",
  "res": 9
}
