crates/rpkl-runtime/tests/snapshots/snapshot_tests__upstream_let_in_lambda.snap
---
source: crates/rpkl-runtime/tests/snapshot_tests.rs
assertion_line: 2722
expression: eval_pkl(source)
---
{
  "g": "<function>",
  "res": 9
}
