crates/rpkl-runtime/tests/snapshots/snapshot_tests__upstream_let_nested.snap
---
source: crates/rpkl-runtime/tests/snapshot_tests.rs
assertion_line: 2685
expression: eval_pkl(source)
---
{
  "res1": 4,
  "res2": 4
}
