crates/rpkl-runtime/tests/snapshots/snapshot_tests__upstream_let_with_intseq_map.snap
---
source: crates/rpkl-runtime/tests/snapshot_tests.rs
assertion_line: 2752
expression: eval_pkl(source)
---
{
  "res": [
    3,
    4,
    5,
    6,
    7
  ]
}
